Fixed Image layout issues in vertically scrolling StackPanels (still broken when scrolling horizontally), ScrollViewer cleanup

--- a/Xamzor/content/Xamzor.css
+++ b/Xamzor/content/Xamzor.css
@@ -27,6 +27,8 @@
 .UIElement.Image > img {
     min-width: 0;
     min-height: 0;
+    max-width: 100%; /* fixes some cases */
+    /* adding "max-height: 100%" fixes all known cases in Edge/Firefox but breaks things in Webkit */
     visibility: hidden;
 }
 
